syntax = "proto3";

package authorization.test;

import "google/protobuf/timestamp.proto";

option go_package = ".;testing";

enum Enum {
  V1 = 0;
  V2 = 1;
  V3 = 2;
}

message Object {
  string name = 1;
  int64 value = 2;
}

message Dummy {
  Enum enum = 1;
  repeated string repeated_str = 2;
  map<string, Object> map_str_object = 3;
  map<int64, Object> map_int_object = 4;
  map<bool, Object> map_bool_object = 5;
  google.protobuf.Timestamp timestamp = 6;
  repeated Object repeated_objects = 7;
  Object single_object = 8;
  bool boolean_true = 9;
  bool boolean_false = 10;
  uint32 uint32 = 11;
  uint64 uint64 = 12;
  bytes bytes = 13;
  sint32 sint32 = 14;
  // unsupported fields bellow:
  double double = 15;
  float float = 16;
  uint64 overflow = 17;
  // unsupported in proto3
  // group Grp = 999 {
  //   int64 a = 1;
  //   int64 b = 2;
  // };
}
